crates/anodized/tests/compile_fail/internal_fn_in_impl_trait.rs
#![no_main]

use anodized::spec;

trait T {
    fn f(&self);
}

#[spec]
impl T for S {
    fn __anodized_f(&self) {}
}

struct S;
